// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectedList renders correctly when ordered 1`] = `
<SelectedList
  committees={
    Array [
      Object {
        "icon": "MockIcon",
        "info": "Default info",
        "key": "testkom",
        "name": "Testkom",
      },
    ]
  }
  ordered={true}
  totalChoices={3}
/>
`;

exports[`SelectedList renders correctly with empty choices 1`] = `
<SelectedList
  committees={Array []}
  totalChoices={3}
/>
`;

exports[`SelectedList renders correctly with no choices 1`] = `
<SelectedList
  totalChoices={3}
/>
`;

exports[`SelectedList renders correctly with one out of three choices 1`] = `
<SelectedList
  committees={
    Array [
      Object {
        "icon": "MockIcon",
        "info": "Default info",
        "key": "testkom",
        "name": "Testkom",
      },
    ]
  }
  totalChoices={3}
/>
`;

exports[`SelectedList renders correctly with three out of three choices 1`] = `
<SelectedList
  committees={
    Array [
      Object {
        "icon": "MockIcon",
        "info": "Default info",
        "key": "testkom",
        "name": "Testkom",
      },
      Object {
        "icon": "MockIcon",
        "info": "Default info",
        "key": "bestkom",
        "name": "Bestkom",
      },
      Object {
        "icon": "MockIcon",
        "info": "Default info",
        "key": "sickkom",
        "name": "Sickkom",
      },
    ]
  }
  totalChoices={3}
/>
`;

exports[`SelectedList renders correctly with two out of three choices 1`] = `
<SelectedList
  committees={
    Array [
      Object {
        "icon": "MockIcon",
        "info": "Default info",
        "key": "testkom",
        "name": "Testkom",
      },
      Object {
        "icon": "MockIcon",
        "info": "Default info",
        "key": "bestkom",
        "name": "Bestkom",
      },
    ]
  }
  totalChoices={3}
/>
`;

exports[`SelectedList renders with more than total choices 1`] = `
<SelectedList
  committees={
    Array [
      Object {
        "icon": "MockIcon",
        "info": "Default info",
        "key": "testkom",
        "name": "Testkom",
      },
      Object {
        "icon": "MockIcon",
        "info": "Default info",
        "key": "bestkom",
        "name": "Bestkom",
      },
      Object {
        "icon": "MockIcon",
        "info": "Default info",
        "key": "sickkom",
        "name": "Sickkom",
      },
    ]
  }
  totalChoices={2}
/>
`;
